The latest news section has been completed

--- a/index.html
+++ b/index.html
@@ -87,6 +87,33 @@
     </section>
     <section class="latest_news">
         <div class="container">
+            <div class="content_on_top">
+                <h3>أخر الأخبار</h3>
+                <p>تابع أخبارنا</p>
+            </div>
+            <div class="news">
+                <div class="new_num_1">
+                    <img src="images/Background.png" alt="">
+                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
+                    <h4>المدارس تقوم بحملة تثقيفية</h4>
+                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                    <a href="#">تعرف أكثر</a>
+                </div>
+                <div class="new_num_1">
+                    <img src="images/Background(1).png" alt="">
+                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
+                    <h4>المدارس تقوم بحملة تثقيفية</h4>
+                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                    <a href="#">تعرف أكثر</a>
+                </div>
+                <div class="new_num_1">
+                    <img src="images/Background(2).png" alt="">
+                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
+                    <h4>المدارس تقوم بحملة تثقيفية</h4>
+                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                    <a href="#">تعرف أكثر</a>
+                </div>
+            </div>
             
         </div>
     </section>
