The rest of me have two sections and a dev

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="cust-nav">
             <div class="container">
                 <a class="navbar-brand" id="cust-brand" href="#">
-                    <img src="images/noun_599187_cc.svg" alt="" width="55" height="55" class="d-inline-block align-text-center">
+                    <img src="images/noun_599187_cc.svg" alt="" width="55" height="55"
+                        class="d-inline-block align-text-center">
                     المدارس الأميرية
                     <span>التعليم أولا</span>
                 </a>
@@ -55,33 +56,38 @@
             <div class="row">
                 <div class="col-lg-5 col-md-6">
                     <h1>المدارس الأميرية</h1>
-                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص.</p>
+                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،
+                        حيث يمكنك أن تولد مثل هذا النص.</p>
                     <a href="#">تعرف أكثر</a>
                 </div>
             </div>
-        </div> 
+        </div>
     </header>
     <section class="main_sec">
         <div class="container">
             <div class="first">
                 <img src="images/noun_232846_cc-1icon.svg" alt="">
                 <h4>أكفأ المدرسين</h4>
-                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص.</p>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا النص.</p>
             </div>
             <div class="second">
                 <img src="images/noun_751624_cc-2icon.svg" alt="">
                 <h4>الكتب والمكتبات</h4>
-                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص.</p>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا النص.</p>
             </div>
             <div class="third">
                 <img src="images/noun_565059_cc-3icon.svg" alt="">
                 <h4>الدروس المباشرة</h4>
-                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص.</p>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا النص.</p>
             </div>
             <div class="fourth">
                 <img src="images/noun_717315_cc-4icon.svg" alt="">
                 <h4>الشهادات</h4>
-                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص.</p>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا النص.</p>
             </div>
         </div>
     </section>
@@ -91,36 +97,208 @@
                 <h3>أخر الأخبار</h3>
                 <p>تابع أخبارنا</p>
             </div>
-            <div class="news">
-                <div class="new_num_1">
-                    <img src="images/Background.png" alt="">
-                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
-                    <h4>المدارس تقوم بحملة تثقيفية</h4>
-                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
-                    <a href="#">تعرف أكثر</a>
-                </div>
-                <div class="new_num_1">
-                    <img src="images/Background(1).png" alt="">
-                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
-                    <h4>المدارس تقوم بحملة تثقيفية</h4>
-                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
-                    <a href="#">تعرف أكثر</a>
-                </div>
-                <div class="new_num_1">
-                    <img src="images/Background(2).png" alt="">
-                    <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
-                    <h4>المدارس تقوم بحملة تثقيفية</h4>
-                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
-                    <a href="#">تعرف أكثر</a>
+            <div class="row">
+                <div class="news">
+                    <div class="col-lg-4">
+                        <div class="new_num_1">
+                            <img src="images/Background.png" alt="">
+                            <span><i class="fa-regular fa-clock"></i> 15 يناير</span>
+                            <h4>المدارس تقوم بحملة تثقيفية</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو
+                                مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                            <a href="#">تعرف أكثر</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="new_num_2">
+                            <img src="images/Background(1).png" alt="">
+                            <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
+                            <h4>المدارس تقوم بحملة تثقيفية</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو
+                                مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                            <a href="#">تعرف أكثر</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="new_num_3">
+                            <img src="images/Background(2).png" alt="">
+                            <caption><i class="fa-regular fa-clock"></i> 15 يناير</caption>
+                            <h4>المدارس تقوم بحملة تثقيفية</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص هذا النص هو
+                                مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص</p>
+                            <a href="#">تعرف أكثر</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </section>
-
-    <!-- <i class="fa-solid fa-person-chalkboard"></i> -->
-    <!-- <i class="fa-solid fa-books"></i> -->
-
+    <section class="school_gools">
+        <div class="overlay">
+            <div class="container">
+                <div class="content_on_top">
+                    <h3>أهداف مدارسنا</h3>
+                    <p>احصائيات</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6 ">
+                        <img src="images/gools/noun_581708_cc.svg" alt="">
+                        <span>
+                            <h4>100%</h4>
+                            <p>رضا أولياء الأمور</p>
+                        </span>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <img src="images/gools/noun_704736_cc.svg" alt="">
+                        <span>
+                            <h4>104</h4>
+                            <p>المدرسين المعتمدين</p>
+                        </span>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <img src="images/gools/noun_708303_cc.svg" alt="">
+                        <span>
+                            <h4>6240</h4>
+                            <p>الطلاب الملتحقين</p>
+                        </span>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <img src="images/gools/noun_594024_cc.svg" alt="">
+                        <span>
+                            <h4>10245</h4>
+                            <p>الطلاب المتخرجين</p>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="parents_sayings">
+        <div class="container">
+            <div class="content_on_top">
+                <h3>أقوال أولياء الأمور</h3>
+                <p>تسعدنا آرائكم</p>
+            </div>
+            <div class="content">
+                <div class="row">
+                    <div class="col-lg-6 first">
+                        <img src="images/Layer 60.jpg" alt="">
+                        <div class="name_info_text">
+                            <h4>محمد عبد الحميد</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>11/12/2016</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <span>الرياض</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <span>المزيد</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 first">
+                        <img src="images/Layer 60.jpg" alt="">
+                        <div class="name_info_text">
+                            <h4>محمد عبد الحميد</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>11/12/2016</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <span>الرياض</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <span>المزيد</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 first">
+                        <img src="images/Layer 60.jpg" alt="">
+                        <div class="name_info_text">
+                            <h4>محمد عبد الحميد</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>11/12/2016</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <span>الرياض</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <span>المزيد</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 first">
+                        <img src="images/Layer 60.jpg" alt="">
+                        <div class="name_info_text">
+                            <h4>محمد عبد الحميد</h4>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <ul>
+                                <li>
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>11/12/2016</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <span>الرياض</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-circle-info"></i>
+                                    <span>المزيد</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="last_section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 img_class"></div>
+                <div class="col-lg-3 contact_us">
+                    <h3>تواصل معنا</h3>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-location-dot"></i>
+                            العنوان <br>
+                            المملكة العربية السعودية - الرياض - شارع مكة
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-phone"></i>
+                            +972598726980
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-envelope"></i>
+                            m7moudnofal98@gmail.com
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-link"></i>
+                                www.Innosoft.com
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 working_hours"></div>
+            </div>
+        </div>
+    </section>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
