map section finshed

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                         <img src="images/Layer 60.jpg" alt="">
                         <div class="name_info_text">
                             <h4>محمد عبد الحميد</h4>
-                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                                العربى، حيث يمكنك أن تولد .</p>
                             <ul>
                                 <li>
                                     <i class="fa-regular fa-clock"></i>
@@ -206,7 +207,8 @@
                         <img src="images/Layer 60.jpg" alt="">
                         <div class="name_info_text">
                             <h4>محمد عبد الحميد</h4>
-                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                                العربى، حيث يمكنك أن تولد .</p>
                             <ul>
                                 <li>
                                     <i class="fa-regular fa-clock"></i>
@@ -227,7 +229,8 @@
                         <img src="images/Layer 60.jpg" alt="">
                         <div class="name_info_text">
                             <h4>محمد عبد الحميد</h4>
-                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                                العربى، حيث يمكنك أن تولد .</p>
                             <ul>
                                 <li>
                                     <i class="fa-regular fa-clock"></i>
@@ -248,7 +251,8 @@
                         <img src="images/Layer 60.jpg" alt="">
                         <div class="name_info_text">
                             <h4>محمد عبد الحميد</h4>
-                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد .</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                                العربى، حيث يمكنك أن تولد .</p>
                             <ul>
                                 <li>
                                     <i class="fa-regular fa-clock"></i>
@@ -271,7 +275,7 @@
     </section>
     <section class="last_section">
         <div class="container">
-            <div class="row">
+            <div class="row last_section_content">
                 <div class="col-lg-6 img_class"></div>
                 <div class="col-lg-3 contact_us">
                     <h3>تواصل معنا</h3>
@@ -291,11 +295,34 @@
                         </li>
                         <li>
                             <i class="fa-solid fa-link"></i>
-                                www.Innosoft.com
+                            www.Innosoft.com
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-3 working_hours"></div>
+                <div class="col-lg-3 working_hours">
+                    <h3>مواقيت الدوام</h3>
+                    <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مول</p>
+                    <ul>
+                        <li>
+                            <span>السبت - للجمعة</span><br>
+                            am 8 - pm 10
+                        </li>
+                        <li>
+                            <span>الخميس</span><br>
+                            am 8 - pm 8
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="map">
+        <div class="overlay">
+            <div class="feild">
+                <div class="input-group flex-nowrap">
+                    <input type="text" class="form-control" placeholder="ادخـل ايـمـيـلـك" aria-label="Username" aria-describedby="addon-wrapping">
+                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-arrow-left"></i></span>
+                </div>
             </div>
         </div>
     </section>
