--- a/index.html
+++ b/index.html
@@ -320,10 +320,28 @@
         <div class="overlay">
             <div class="feild">
                 <div class="input-group flex-nowrap">
-                    <input type="text" class="form-control" placeholder="ادخـل ايـمـيـلـك" aria-label="Username" aria-describedby="addon-wrapping">
+                    <input type="text" class="form-control" placeholder="ادخـل ايـمـيـلـك" aria-label="Username"
+                        aria-describedby="addon-wrapping">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-arrow-left"></i></span>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <footer>
+                <h3>المدارس الأميرية</h3>
+                <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                    التطبيق.</p>
+                <ul class="icons">
+                    <li class="icon1"><i class="fa-brands fa-facebook-f"></i></li>
+                    <li class="icon2"><i class="fa-brands fa-twitter"></i></li>
+                    <li class="icon3"><i class="fa-brands fa-instagram"></i></li>
+                    <li class="icon4"><i class="fa-brands fa-google-plus-g"></i></li>
+                </ul>
+            </footer>
+
         </div>
     </section>
     <script src="js/all.min.js"></script>
