some of paddings & margins size edited

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="cust-nav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="cust_nav">
             <div class="container">
-                <a class="navbar-brand" id="cust-brand" href="#">
+                <a class="navbar-brand" id="cust_brand" href="#">
                     <img src="images/noun_599187_cc.svg" alt="" width="55" height="55"
                         class="d-inline-block align-text-center">
-                    المدارس الأميرية
+                    المدارس الأميرية<br>
                     <span>التعليم أولا</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,19 +34,19 @@
                             <a class="nav-link active" aria-current="page" href="#">الرئيسية</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">نشاطاتنا</a>
+                            <a class="nav-link" href="#our_activities">نشاطاتنا</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">أولياء الأمور</a>
+                            <a class="nav-link" href="#parents_sayings">أولياء الأمور</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">الأخبار</a>
+                            <a class="nav-link" href="#latest_news">الأخبار</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">من نحن</a>
+                            <a class="nav-link" href="#footer">من نحن</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">اتصل بنا</a>
+                            <a class="nav-link" href="#contact_school">اتصل بنا</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
             </div>
         </div>
     </header>
-    <section class="main_sec">
+    <section class="main_sec" id="our_activities">
         <div class="container">
             <div class="first">
                 <img src="images/noun_232846_cc-1icon.svg" alt="">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section class="latest_news">
+    <section class="latest_news" id="latest_news">
         <div class="container">
             <div class="content_on_top">
                 <h3>أخر الأخبار</h3>
@@ -173,7 +173,7 @@
             </div>
         </div>
     </section>
-    <section class="parents_sayings">
+    <section class="parents_sayings" id="parents_sayings">
         <div class="container">
             <div class="content_on_top">
                 <h3>أقوال أولياء الأمور</h3>
@@ -273,7 +273,7 @@
             </div>
         </div>
     </section>
-    <section class="last_section">
+    <section class="last_section" id="contact_school">
         <div class="container">
             <div class="row last_section_content">
                 <div class="col-lg-6 img_class"></div>
@@ -327,7 +327,7 @@
             </div>
         </div>
     </section>
-    <section class="footer">
+    <section class="footer" id="footer">
         <div class="container">
             <footer>
                 <h3>المدارس الأميرية</h3>
