--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h1>المدارس الأميرية</h1>
                     <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،
                         حيث يمكنك أن تولد مثل هذا النص.</p>
@@ -335,9 +335,9 @@
                     يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
                     التطبيق.</p>
                 <ul class="icons">
-                    <li class="icon1"><i class="fa-brands fa-facebook-f"></i></li>
-                    <li class="icon2"><i class="fa-brands fa-twitter"></i></li>
-                    <li class="icon3"><i class="fa-brands fa-instagram"></i></li>
+                    <li class="icon1"><i class="fa-brands fa-facebook-f" href="https://www.facebook.com/M.N0fal/"></i></li>
+                    <li class="icon2"><i class="fa-brands fa-twitter" href="https://twitter.com/mahmnofal"></i></li>
+                    <li class="icon3"><i class="fa-brands fa-instagram" href="" ></i></li>
                     <li class="icon4"><i class="fa-brands fa-google-plus-g"></i></li>
                 </ul>
             </footer>
